Performance issue on mobile - Fix #2

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
   src: url("/fonts/Inter-Bold.woff2") format("woff2"),
     url("/fonts/Inter-Bold.woff") format("woff");
   font-weight: 700;
-  font-style: normal;
+  font-style: bold;
 }
 
 :root {
